{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 208,
  "lineage": "b00a43d7-a613-ec9c-4916-00fd5dea6c6a",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-apache1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0af9d24bd5539d7af",
            "arn": "arn:aws:ec2:us-east-1:125467979341:instance/i-0dc0409a0d284fe05",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dc0409a0d284fe05",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bc1f88caab121b6d",
            "private_dns": "ip-10-0-1-201.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-077caa63cb9d6effc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c1307ceae1f4a9a0",
            "tags": {
              "Name": "private-apache1"
            },
            "tags_all": {
              "Name": "private-apache1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d85b657ed00e6ee4"
            ]
          },
          "dependencies": [
            "module.compute.aws_security_group.sg",
            "module.compute.data.aws_ami.ubuntu",
            "module.network.aws_subnet.apache1_private_subnet",
            "module.network.aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-apache2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0af9d24bd5539d7af",
            "arn": "arn:aws:ec2:us-east-1:125467979341:instance/i-01e2115d2f2a0ee0f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01e2115d2f2a0ee0f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03a510cca351e6b77",
            "private_dns": "ip-10-0-3-236.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-049692f014aa148b7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0135e7834968f15e8",
            "tags": {
              "Name": "private-apache2"
            },
            "tags_all": {
              "Name": "private-apache2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d85b657ed00e6ee4"
            ]
          },
          "dependencies": [
            "module.compute.aws_security_group.sg",
            "module.compute.data.aws_ami.ubuntu",
            "module.network.aws_subnet.apache2_private_subnet",
            "module.network.aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0af9d24bd5539d7af",
            "arn": "arn:aws:ec2:us-east-1:125467979341:instance/i-04c7f8db4d208181f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04c7f8db4d208181f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d5aa8a28443d2f5b",
            "private_dns": "ip-10-0-0-54.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.54",
            "public_ip": "18.212.246.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a24d85ea5c5e226e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f409bd2a9e77bfb",
            "tags": {
              "Name": "public-nginx1"
            },
            "tags_all": {
              "Name": "public-nginx1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d85b657ed00e6ee4"
            ]
          },
          "dependencies": [
            "module.compute.aws_lb.nginx_load_balancer",
            "module.compute.aws_security_group.sg",
            "module.compute.data.aws_ami.ubuntu",
            "module.network.aws_subnet.nginx1_public_subnet",
            "module.network.aws_subnet.nginx2_public_subnet",
            "module.network.aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0af9d24bd5539d7af",
            "arn": "arn:aws:ec2:us-east-1:125467979341:instance/i-0bd90e361244e6797",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bd90e361244e6797",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02fbc2ad0b46bda36",
            "private_dns": "ip-10-0-2-119.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.119",
            "public_ip": "52.55.46.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-011437ae84e9fd215",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eb16cd131ca57c87",
            "tags": {
              "Name": "public-nginx2"
            },
            "tags_all": {
              "Name": "public-nginx2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d85b657ed00e6ee4"
            ]
          },
          "dependencies": [
            "module.compute.aws_lb.nginx_load_balancer",
            "module.compute.aws_security_group.sg",
            "module.compute.data.aws_ami.ubuntu",
            "module.network.aws_subnet.nginx1_public_subnet",
            "module.network.aws_subnet.nginx2_public_subnet",
            "module.network.aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "apache_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:125467979341:loadbalancer/app/apache-load-balancer/0434792a94780258",
            "arn_suffix": "app/apache-load-balancer/0434792a94780258",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-apache-load-balancer-216787448.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:125467979341:loadbalancer/app/apache-load-balancer/0434792a94780258",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "apache-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d85b657ed00e6ee4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0135e7834968f15e8"
              },
              {
                "subnet_id": "subnet-0c1307ceae1f4a9a0"
              }
            ],
            "subnets": [
              "subnet-0135e7834968f15e8",
              "subnet-0c1307ceae1f4a9a0"
            ],
            "tags": {
              "Environment": "sprints-apache-lb"
            },
            "tags_all": {
              "Environment": "sprints-apache-lb"
            },
            "vpc_id": "vpc-06a68ceaec7a6c460",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.compute.aws_security_group.sg",
            "module.network.aws_subnet.apache1_private_subnet",
            "module.network.aws_subnet.apache2_private_subnet",
            "module.network.aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:125467979341:loadbalancer/app/nginx-load-balancer/89dd5f71f21ac07b",
            "arn_suffix": "app/nginx-load-balancer/89dd5f71f21ac07b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "nginx-load-balancer-1169318836.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:125467979341:loadbalancer/app/nginx-load-balancer/89dd5f71f21ac07b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nginx-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d85b657ed00e6ee4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00f409bd2a9e77bfb"
              },
              {
                "subnet_id": "subnet-0eb16cd131ca57c87"
              }
            ],
            "subnets": [
              "subnet-00f409bd2a9e77bfb",
              "subnet-0eb16cd131ca57c87"
            ],
            "tags": {
              "Environment": "sprints-nginx-lb"
            },
            "tags_all": {
              "Environment": "sprints-nginx-lb"
            },
            "vpc_id": "vpc-06a68ceaec7a6c460",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.compute.aws_security_group.sg",
            "module.network.aws_subnet.nginx1_public_subnet",
            "module.network.aws_subnet.nginx2_public_subnet",
            "module.network.aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "apache_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:125467979341:listener/app/apache-load-balancer/0434792a94780258/ed9e9524d234aecb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:125467979341:targetgroup/apache-tg/37fdde4ec881273a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:125467979341:listener/app/apache-load-balancer/0434792a94780258/ed9e9524d234aecb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:125467979341:loadbalancer/app/apache-load-balancer/0434792a94780258",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_lb.apache_load_balancer",
            "module.compute.aws_lb_target_group.apache-tg",
            "module.compute.aws_security_group.sg",
            "module.network.aws_subnet.apache1_private_subnet",
            "module.network.aws_subnet.apache2_private_subnet",
            "module.network.aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:125467979341:listener/app/nginx-load-balancer/89dd5f71f21ac07b/0f9018ee89b13f33",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:125467979341:targetgroup/nginx-tg/6daf26b23917a09c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:125467979341:listener/app/nginx-load-balancer/89dd5f71f21ac07b/0f9018ee89b13f33",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:125467979341:loadbalancer/app/nginx-load-balancer/89dd5f71f21ac07b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_lb.nginx_load_balancer",
            "module.compute.aws_lb_target_group.nginx-tg",
            "module.compute.aws_security_group.sg",
            "module.network.aws_subnet.nginx1_public_subnet",
            "module.network.aws_subnet.nginx2_public_subnet",
            "module.network.aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "apache-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:125467979341:targetgroup/apache-tg/37fdde4ec881273a",
            "arn_suffix": "targetgroup/apache-tg/37fdde4ec881273a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:125467979341:targetgroup/apache-tg/37fdde4ec881273a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "apache-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06a68ceaec7a6c460"
          },
          "dependencies": [
            "module.network.aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:125467979341:targetgroup/nginx-tg/6daf26b23917a09c",
            "arn_suffix": "targetgroup/nginx-tg/6daf26b23917a09c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:125467979341:targetgroup/nginx-tg/6daf26b23917a09c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06a68ceaec7a6c460"
          },
          "dependencies": [
            "module.network.aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "apache1_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:125467979341:targetgroup/apache-tg/37fdde4ec881273a-20230725162834578400000004",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:125467979341:targetgroup/apache-tg/37fdde4ec881273a",
            "target_id": "i-0dc0409a0d284fe05"
          },
          "dependencies": [
            "module.compute.aws_instance.private-apache1",
            "module.compute.aws_lb_target_group.apache-tg",
            "module.compute.aws_security_group.sg",
            "module.compute.data.aws_ami.ubuntu",
            "module.network.aws_subnet.apache1_private_subnet",
            "module.network.aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "apache2_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:125467979341:targetgroup/apache-tg/37fdde4ec881273a-20230725162834508800000003",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:125467979341:targetgroup/apache-tg/37fdde4ec881273a",
            "target_id": "i-01e2115d2f2a0ee0f"
          },
          "dependencies": [
            "module.compute.aws_instance.private-apache2",
            "module.compute.aws_lb_target_group.apache-tg",
            "module.compute.aws_security_group.sg",
            "module.compute.data.aws_ami.ubuntu",
            "module.network.aws_subnet.apache2_private_subnet",
            "module.network.aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx1_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx2_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125467979341:security-group/sg-0d85b657ed00e6ee4",
            "description": "allow_ssh_http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d85b657ed00e6ee4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPs from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_http",
            "name_prefix": "",
            "owner_id": "125467979341",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-traffic"
            },
            "tags_all": {
              "Name": "allow-traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a68ceaec7a6c460"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125467979341:internet-gateway/igw-079e7e4d4e866c1a6",
            "id": "igw-079e7e4d4e866c1a6",
            "owner_id": "125467979341",
            "tags": {
              "Name": "my-gw"
            },
            "tags_all": {
              "Name": "my-gw"
            },
            "vpc_id": "vpc-06a68ceaec7a6c460"
          },
          "dependencies": [
            "module.network.aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125467979341:route-table/rtb-0d1e500a580638d08",
            "id": "rtb-0d1e500a580638d08",
            "owner_id": "125467979341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-private-rt"
            },
            "tags_all": {
              "Name": "my-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a68ceaec7a6c460"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125467979341:route-table/rtb-0d390c4c2faa2faaf",
            "id": "rtb-0d390c4c2faa2faaf",
            "owner_id": "125467979341",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-079e7e4d4e866c1a6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-public-rt"
            },
            "tags_all": {
              "Name": "my-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a68ceaec7a6c460"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "apache1_private-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095750978c5090b76",
            "route_table_id": "rtb-0d1e500a580638d08",
            "subnet_id": "subnet-0c1307ceae1f4a9a0"
          },
          "dependencies": [
            "module.network.aws_route_table.private-rt",
            "module.network.aws_subnet.apache1_private_subnet",
            "module.network.aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "apache2_private-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e482cc27cb08b175",
            "route_table_id": "rtb-0d1e500a580638d08",
            "subnet_id": "subnet-0135e7834968f15e8"
          },
          "dependencies": [
            "module.network.aws_route_table.private-rt",
            "module.network.aws_subnet.apache2_private_subnet",
            "module.network.aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nginx1_public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e820472b8001b771",
            "route_table_id": "rtb-0d390c4c2faa2faaf",
            "subnet_id": "subnet-00f409bd2a9e77bfb"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public-rt",
            "module.network.aws_subnet.nginx1_public_subnet",
            "module.network.aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nginx2_public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4836590ea5d2862",
            "route_table_id": "rtb-0d390c4c2faa2faaf",
            "subnet_id": "subnet-0eb16cd131ca57c87"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public-rt",
            "module.network.aws_subnet.nginx2_public_subnet",
            "module.network.aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "apache1_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125467979341:subnet/subnet-0c1307ceae1f4a9a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1307ceae1f4a9a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "125467979341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apache1_private_subnet-sprints"
            },
            "tags_all": {
              "Name": "apache1_private_subnet-sprints"
            },
            "vpc_id": "vpc-06a68ceaec7a6c460"
          },
          "dependencies": [
            "module.network.aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "apache2_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125467979341:subnet/subnet-0135e7834968f15e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0135e7834968f15e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "125467979341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apache2_private_subnet-sprints"
            },
            "tags_all": {
              "Name": "apache2_private_subnet-sprints"
            },
            "vpc_id": "vpc-06a68ceaec7a6c460"
          },
          "dependencies": [
            "module.network.aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nginx1_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125467979341:subnet/subnet-00f409bd2a9e77bfb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f409bd2a9e77bfb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "125467979341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nginx1_public_subnet-sprints"
            },
            "tags_all": {
              "Name": "nginx1_public_subnet-sprints"
            },
            "vpc_id": "vpc-06a68ceaec7a6c460"
          },
          "dependencies": [
            "module.network.aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nginx2_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125467979341:subnet/subnet-0eb16cd131ca57c87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb16cd131ca57c87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "125467979341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nginx2_public_subnet-sprints"
            },
            "tags_all": {
              "Name": "nginx2_public_subnet-sprints"
            },
            "vpc_id": "vpc-06a68ceaec7a6c460"
          },
          "dependencies": [
            "module.network.aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125467979341:vpc/vpc-06a68ceaec7a6c460",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ad023c27649b8e2c",
            "default_route_table_id": "rtb-0c19bfb7cf94f4c41",
            "default_security_group_id": "sg-068f44ce423e65225",
            "dhcp_options_id": "dopt-0b341507be17b7243",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06a68ceaec7a6c460",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c19bfb7cf94f4c41",
            "owner_id": "125467979341",
            "tags": {
              "Name": "terraform-sprints"
            },
            "tags_all": {
              "Name": "terraform-sprints"
            }
          }
        }
      ]
    }
  ]
}